--- a/API/API.csproj
+++ b/API/API.csproj
@@ -10,5 +10,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="client\build\**">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 </Project>
